# serializer version: 1
# name: test_store_migration[store_data0]
  dict({
    'data': dict({
      'backups': list([
        dict({
          'backup_id': 'abc123',
          'failed_agent_ids': list([
            'test.remote',
          ]),
        }),
      ]),
      'config': dict({
        'agents': dict({
        }),
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'days': list([
          ]),
          'recurrence': 'never',
          'state': 'never',
          'time': None,
        }),
      }),
    }),
    'key': 'backup',
    'minor_version': 3,
    'version': 1,
  })
# ---
# name: test_store_migration[store_data0].1
  dict({
    'data': dict({
      'backups': list([
        dict({
          'backup_id': 'abc123',
          'failed_agent_ids': list([
            'test.remote',
          ]),
        }),
      ]),
      'config': dict({
        'agents': dict({
        }),
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'days': list([
          ]),
          'recurrence': 'never',
          'state': 'never',
          'time': None,
        }),
      }),
    }),
    'key': 'backup',
    'minor_version': 3,
    'version': 1,
  })
# ---
# name: test_store_migration[store_data1]
  dict({
    'data': dict({
      'backups': list([
        dict({
          'backup_id': 'abc123',
          'failed_agent_ids': list([
            'test.remote',
          ]),
        }),
      ]),
      'config': dict({
        'agents': dict({
          'test.remote': dict({
            'protected': True,
          }),
        }),
        'create_backup': dict({
          'agent_ids': list([
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'days': list([
          ]),
          'recurrence': 'never',
          'time': None,
        }),
        'something_from_the_future': 'value',
      }),
    }),
    'key': 'backup',
    'minor_version': 3,
    'version': 1,
  })
# ---
# name: test_store_migration[store_data1].1
  dict({
    'data': dict({
      'backups': list([
        dict({
          'backup_id': 'abc123',
          'failed_agent_ids': list([
            'test.remote',
          ]),
        }),
      ]),
      'config': dict({
        'agents': dict({
          'test.remote': dict({
            'protected': True,
          }),
        }),
        'create_backup': dict({
          'agent_ids': list([
            'test-agent',
          ]),
          'include_addons': None,
          'include_all_addons': False,
          'include_database': True,
          'include_folders': None,
          'name': None,
          'password': None,
        }),
        'last_attempted_automatic_backup': None,
        'last_completed_automatic_backup': None,
        'retention': dict({
          'copies': None,
          'days': None,
        }),
        'schedule': dict({
          'days': list([
          ]),
          'recurrence': 'never',
          'state': 'never',
          'time': None,
        }),
      }),
    }),
    'key': 'backup',
    'minor_version': 3,
    'version': 1,
  })
# ---
